--- a/gui/css/common.css
+++ b/gui/css/common.css
@@ -122,10 +122,15 @@ select{
     width: 90%;
     float: left;
 }
+#filters-dropdown-content{
+    padding: 20px 0px 20px 30px;
+    max-width: 90%;
+}
 #filters-dropdown-btn{
     width: 100%;
 }
 #filters-dropdown-content{
+    border-style: groove;
     position: absolute;
     z-index: 2;
     display:flex;
@@ -141,6 +146,7 @@ select{
     width: 10%;
     padding-left: 20px;
 }
+label[for="strict"],label[for="lax"]{cursor: pointer;}
 /* filters */
 
 /* result */
