moved around the files

--- a/front_end/react_app/src/gui/css/common.css
+++ b/front_end/react_app/src/gui/css/common.css
@@ -1,15 +1,175 @@
+/* common */
 body, html {
-    height: 100%;
-    font-family: Arial;
+    font-family: 'Actor';
 }
-body {
+body {           
     padding: 0;
     margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    min-width: 1280px;
 }
-
 button, a{
+    border: none;
+}
+select, button, a, label.custom-control-label{
     cursor: pointer;
 }
+a:focus, button:focus, input:focus {
+    outline: none;
+}
+button:disabled {
+    cursor: default;
+}
+select{
+    background-color: white;
+    outline: transparent;
+    border-radius: 1px;
+    border-radius: 5px;
+    border-color: rgb(207, 207, 207);
+}
+/* common */
+
+/* dashboard */
+.wrap-dashboard{
+    width: 100%;
+}
+.left-menu{
+    width:15%;
+    min-width: 150px;   
+    height: 100vh;
+    justify-content: space-around;
+    display:flex;
+    flex-direction:column;
+    background:#fff;
+    z-index:999;
+    box-shadow: 0 0 5px 3px rgba(151, 151, 153, 0.7);
+    position: fixed;
+    left:0;
+}
+.right-content{
+    height:100vh;
+    padding-left: 200px;
+    background-color: #d7d9fff7;
+    overflow: auto;
+    min-width: 800px;
+}
+.wrap-search-result{
+    margin:auto;
+    width: 80%;
+    padding-top:10%;
+    min-width: 800px;
+}
+.wrap-search-filters{
+    margin-bottom: 10%;
+    display: grid;
+    position: relative;
+    min-width: 800px;
+}
+
+/* left menu */
+/* logo */
+.wrap-logo{
+    text-align: center;
+}
+.logo{
+    width: 50%;
+    line-height: 1.2;
+}
+/* logo */
+
+
+/* icon */
+.wrap-icon{
+    width: auto;
+    padding-bottom: 10px;
+}
+.wrap-icon > img{
+    width:20%;
+}
+/* icon */
+
+/* menu */
+.left-menu button{
+    background-color: transparent;
+    border: transparent;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+.left-menu button:hover{
+    background-color: #d1d3faf7;
+}
+.left-menu button[chosen="true"]{
+    background-color: #b4b6fcf7;
+}
+/* menu */
+
+/* left menu */
+
+/* right content */
+/* filters */
+.filters-dropdown{
+    width: 90%;
+    float: left;
+}
+#filters-dropdown-content{
+    padding: 20px 30px 20px 30px;
+    max-width: 90%;
+}
+#filters-dropdown-btn{
+    width: 100%;
+}
+#filters-dropdown-content{
+    border-style: groove;
+    position: absolute;
+    z-index: 2;
+    display:flex;
+    flex-direction:column;
+    width: 100%;
+    margin: 0;
+    background-color: white;
+    border-radius: 0px 0px 10px 10px;
+    display: none;
+}
+.filters-radio{
+    float: right;
+    width: 10%;
+    padding-left: 20px;
+}
+label[for="strict"],label[for="lax"]{cursor: pointer;}
+/* filters */
+
+/* result */
+.wrap-result{
+    position: relative;
+}
+.wrap-result-top{
+    display: flex;
+    align-items: center;
+}
+.result-text{
+    font-weight: bold;
+    font-size: 30px;
+}
+.list-group-item{
+    display:flex;
+    flex-direction:row;
+    justify-content: space-around;
+}
+.list-group-item:hover{
+    background-color: #c3c5f7f7;
+}
+.item-info{    
+    flex-direction:column;
+    padding: 2% 0% 2% 3%;
+    background-color: #a4a7fcf7;
+    display: none;
+}
+.pagination{
+    place-content: center;
+    margin-top: 10px;
+}
+.page-item > button.active{
+    color: white;
+    background-color: #007bff;
+}
+/* result */
+/* right content */
