--- a/front_end/react_app/src/gui/css/login_signup.css
+++ b/front_end/react_app/src/gui/css/login_signup.css
@@ -1,3 +1,24 @@
+/* react styling fixes */
+
+.btm-space-main{
+    margin: 0;
+}
+
+/* inputs */
+/* login button */
+.login-button{
+    width: 200px;
+    line-height: 1.2;
+}
+
+
+
+/*********************************************************************************** END ************************************************************************************/
+
+
+
+
+
 #bg-outer{
     text-align: center;
     z-index: 0;
@@ -73,12 +94,7 @@ input{
     border: none;
     overflow: visible;
 }
-/* inputs */
-/* login button */
-button{
-    width: 200px;
-    line-height: 1.2;
-}
+
 /* login button */
 /* input helper */
 .helper{
