--- a/front_end/react_app/src/gui/css/track_application.css
+++ b/front_end/react_app/src/gui/css/track_application.css
@@ -1,12 +1,22 @@
+/* react styling fixes */
+
+.trello-list-group-item > h5{
+    color: black;
+    width: 50%;
+}
+
+
+
+/*********************************************************************************** END ************************************************************************************/
+
+
+
 /* result */
 #plot-btn{
     position: absolute;
     right:0;
 }
-.list-group-item > h5{
-    color: black;
-    width: 50%;
-}
+
 h5:nth-child(2) {
     text-align: end;
 }
