finished button and finished stub for college lists.

--- a/front_end/react_app/src/gui/css/center.module.css
+++ b/front_end/react_app/src/gui/css/center.module.css
@@ -1,7 +1,8 @@
-div.center_container{
+.center_container{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-family: 'Actor';
+    font-family: None;
 }
+
