--- a/front_end/react_app/src/gui/css/common.css
+++ b/front_end/react_app/src/gui/css/common.css
@@ -10,6 +10,16 @@
     justify-content: space-around !important;
 }
 
+/*moved to index.css*/
+/*body, html {*/
+/*    font-family: 'Actor' !important;*/
+/*}*/
+/*body {           */
+/*    padding: 0;*/
+/*    margin: 0;*/
+/*    min-width: 1280px;*/
+/*}*/
+
 
 
 /*********************************************************************************** END ************************************************************************************/
@@ -17,14 +27,10 @@
 
 
 /* common */
-body, html {
-    font-family: 'Actor' !important;
-}
-body {           
-    padding: 0;
-    margin: 0;
-    min-width: 1280px;
-}
+
+
+
+
 button, a{
     border: none;
 }
