--- a/front_end/react_app/src/index.css
+++ b/front_end/react_app/src/index.css
@@ -3,10 +3,12 @@ body, html {
   height: 100%;
   width: 100%;
   margin: 0;
+  font-family: 'Actor', sans-serif;
 }
 
 #root{
   height: 100%;
   width: 100%;
+
 }
 
