updated the search college gui in react

--- a/front_end/react_app/src/gui/css/search_college.css
+++ b/front_end/react_app/src/gui/css/search_college.css
@@ -1,7 +1,10 @@
 /* filters */
 #filters-dropdown-content td{width: 33%;}
-#admission-rate, #major1, #major2, #size, #tuition, #act-composite-min, #act-composite-max{width: 100px;height: 25px;}
-#sat-ebrw-min, #sat-ebrw-max, #sat-math-min, #sat-math-max{width: 125px;height: 25px;}
+.range{display: flex;}
+#admission-rate-min, #sat-ebrw-min, #sat-math-min, #act-composite-min{margin-right: 5px;}
+#admission-rate-max, #sat-ebrw-max, #sat-math-max, #act-composite-max{margin-left: 5px;}
+#admission-rate-min, #admission-rate-max, #major1, #major2, #size, #cost-of-attendance, #act-composite-min, #act-composite-max{width: 100px;height: 25px;}
+#sat-ebrw-min, #sat-ebrw-max, #sat-math-min, #sat-math-max{width: 115px;height: 25px;}
 #ranking-val{color: red;font-weight: bold;padding-left: 5px;}
 .slider {
     height: 25px;
@@ -12,7 +15,14 @@
 /* filters */
 
 /* result */
-#sort-btn{position: absolute;right:0;}
+div.result-top > div{display: inline;position: absolute; right: 0;}
+.dropdown-menu{z-index: 1;}
+div.result-top > div > button {width: 204px;}
+.sort-option:hover{background-color: rgb(211, 210, 210);}
+.college-name{color: black;width: 80%;}
+.dropdown-menu{z-index: 1;}
+div.result-top > div > button {width: 204px;}
+.sort-option:hover{background-color: rgb(211, 210, 210);}
 .college-name{color: black;width: 80%;}
 #college-list button a{min-width: 120px;}
 .item-info td{width: 25%;}
