--- a/gui/css/search_college.css
+++ b/gui/css/search_college.css
@@ -20,6 +20,10 @@ div.result-top > div{display: inline;position: absolute; right: 0;}
 div.result-top > div > button {width: 204px;}
 .sort-option:hover{background-color: rgb(211, 210, 210);}
 .college-name{color: black;width: 80%;}
+.dropdown-menu{z-index: 1;}
+div.result-top > div > button {width: 204px;}
+.sort-option:hover{background-color: rgb(211, 210, 210);}
+.college-name{color: black;width: 80%;}
 #college-list button a{min-width: 120px;}
 .item-info td{width: 25%;}
 .item-info td b{font-size: 20px;}
