--- a/gui/css/my_page.css
+++ b/gui/css/my_page.css
@@ -69,7 +69,7 @@ table{border-spacing:0 15px; border-collapse: separate;}
 /* list */
 /* application */
 
-/* plot*/
+/* modal*/
 #find-similar-high-schools-modal > div{
     left:50%; top:50%;
     transform:translate(-50%,-50%);
@@ -92,4 +92,4 @@ table{border-spacing:0 15px; border-collapse: separate;}
 }
 .similar-high-school-name{text-align: center;}
 .similar-high-school-info > ul{margin: 0;}
-/* plot*/
+/* modal*/
