Fixed lots of css conflicts. Took me days.

--- a/front_end/react_app/src/gui/css/search_college.css
+++ b/front_end/react_app/src/gui/css/search_college.css
@@ -24,6 +24,8 @@
     display: none;
 }
 
+div.search-result-top > div{display: inline;position: absolute; right: 0;}
+
 /***************************************************************** react fixes ********************************************************/
 
 .range{display: flex;}
@@ -41,7 +43,7 @@
 /* filters */
 
 /* result */
-div.result-top > div{display: inline;position: absolute; right: 0;}
+
 .dropdown-menu{z-index: 1;}
 div.result-top > div > button {width: 204px;}
 .sort-option:hover{background-color: rgb(211, 210, 210);}
