ADD scatterplot option buttons

--- a/gui/css/track_application.css
+++ b/gui/css/track_application.css
@@ -36,7 +36,7 @@
 #plot-modal > div{
     left:50%; top:50%;
     transform:translate(-50%,-50%);
-    width: 50%;height: 50%;
+    width: 800px;height: 70%;
     position: fixed;
 }
 #plot-modal > div > div{
