gui changes and bug fixes

--- a/front_end/react_app/src/gui/css/track_application.css
+++ b/front_end/react_app/src/gui/css/track_application.css
@@ -6,6 +6,11 @@
     /*position: fixed;*/
 }
 
+#plot-modal > div > div{
+    height: 100%;
+}
+#plot-modal-buttons{text-align: center;}
+
 /****************************************************************************************** react css fixes *****************************************************************************/
 
 
