--- a/front_end/react_app/src/gui/css/search_college.css
+++ b/front_end/react_app/src/gui/css/search_college.css
@@ -23,9 +23,8 @@
     border-radius: 0px 0px 10px 10px;
     display: none;
 }
-
-div.search-result-top > div{display: inline;position: absolute; right: 0;}
-
+div.search-result-top > div{display: inline;position: absolute; right: 0;z-index: 2;}
+div.search-result-top > div > button {width: 204px;}
 /***************************************************************** react fixes ********************************************************/
 
 .range{display: flex;}
@@ -44,12 +43,9 @@ div.search-result-top > div{display: inline;position: absolute; right: 0;}
 
 /* result */
 
-.dropdown-menu{z-index: 1;}
-div.result-top > div > button {width: 204px;}
 .sort-option:hover{background-color: rgb(211, 210, 210);}
 .college-name{color: black;width: 80%;}
 .dropdown-menu{z-index: 1;}
-div.result-top > div > button {width: 204px;}
 .sort-option:hover{background-color: rgb(211, 210, 210);}
 .college-name{color: black;width: 80%;}
 #college-list button a{min-width: 120px;}
